--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: 4.3.2
-  shared_preferences: 0.5.12
-  cupertino_icons: ^0.1.3
+  provider: ^5.0.0
+  shared_preferences: ^2.0.6
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
